--- a/css/styles.css
+++ b/css/styles.css
@@ -8,8 +8,6 @@
   }
 
 
-
-
 .numero {
     font-family: 'Be Vietnam', sans-serif;
     width: 69px;
@@ -32,5 +30,46 @@
     height: 23px;
 
 }
+
+.puntosDiferenciaPros {
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+    width: 446px;
+    height: 682px;
+    position: absolute;
+    top: 1415px;
+    left: 34px;
+  }
+  
+  .diferencias {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    padding: 20px;
+    background-color: #f2f2f2;
+  }
+  
+  .numero {
+    font-size: 24px;
+    font-weight: bold;
+  }
+  
+  .contenido {
+    margin-top: 10px;
+  }
+  
+  h3 {
+    font-size: 18px;
+    margin-bottom: 10px;
+  }
+  
+  p {
+    font-size: 16px;
+    line-height: 1.5;
+  }
+
 
 
