ajustando imagen body

--- a/css/styles.css
+++ b/css/styles.css
@@ -7,6 +7,7 @@
     font-size: 16px;
   }
 
+/* HEADER */
 
 header {
     padding: 20px 40px 0 40px;
@@ -21,18 +22,37 @@ header button{
 }
 .logo{
     width: 108px;
-    
+
 }
 .hamburger{
     width: 60px;
-    height: 60px;
+    height: 55px;
 }
 
+/* MAIN */
+
+.afterHeader img, .afterHeader div{
+    width: 400px;
+}
+
+h1{
+width: 400px;
+font-weight: 700;
+font-size: 50px;
+line-height: 57.3px;
+text-align: right;
+color: #232C50;
+}
+
+
+
+
+
+
+
+
+
 body {
-  width: 480px;
-  height: 3593px;
-  top: -2627px;
-  left: 654px;
   background: #FFFFFF;
 }
 
