--- a/css/styles.css
+++ b/css/styles.css
@@ -43,11 +43,10 @@ body {
   font-family: 'Be Vietnam', sans-serif;
   font-size: 16px;
   font-weight: 500;
-  line-height: 26px;
+  line-height: 43px;
   letter-spacing: -0.01em;
   text-align: left;
 }
-
 
 
 .puntosDiferenciaPros .contenido p {
@@ -57,6 +56,10 @@ body {
   line-height: 26px;
   letter-spacing: -0.01em;
   text-align: left;
-  background: rgba(179, 178, 183, 0); 
-  color: rgba(179, 178, 183, 1); 
+  background: rgba(179, 178, 183, 0);
+  color: rgba(179, 178, 183, 1);
+  width: 428px; 
+  height: 150px; 
+  padding: 10px; 
+  margin-bottom: 10px; 
 }
