--- a/css/styles.css
+++ b/css/styles.css
@@ -127,7 +127,7 @@ body {
 }
 
 .contenido {
-    width: 446vw;
+    width:92.3vw;
 }
 
 .numero {
@@ -187,49 +187,56 @@ body {
 }
 
 .cardJugador {
-    display: none;
+    display: none; 
+    background-color: rgba(250, 250, 250, 1);
+    height: 219px;
+    justify-content: space-evenly;
+    align-items: center;
+    text-align: center;
+    position: relative;
 }
 
 .cardJugador:nth-child(3) {
     display: flex;
     flex-direction: column;
-    text-align: center;
-    align-items: center;
-    margin: 10px auto; 
 }
 
-
-.cardJugador:nth-child(3) .nombreJugador {
-    height: 25px;
-    font-size: 16px;
-    font-weight: 700;
-    line-height: 25px;
-    letter-spacing: -0.01em;
-    text-align: center;
-    margin-top: 25px; 
-    margin-bottom: 15px; 
-    color:#3F4868;
-    
+.cardJugador:nth-child(3) img{
+    position: absolute;
+    top: -35px;
 }
-
-.cardJugador:nth-child(3) p {
-    background-color: rgba(250, 250, 250, 1); 
+.textoJugador {
     font-size: 16px;
     font-weight: 500;
     line-height: 25px;
     letter-spacing: 0em;
     text-align: center; 
     color: rgba(185, 185, 193, 1); 
+    width: 393px;
 }
+.nombreJugador {
+    height: 25px;
+    font-size: 16px;
+    font-weight: 700;
+    line-height: 25px;
+    letter-spacing: -0.01em;
+    text-align: center;
+    color:#3F4868;
+    padding-top: 20px;
+    
+}
+.bestOfTheMonth{
+    display: flex;
+    flex-direction: column;
+    height: 478px;
+    justify-content: space-between;
+    
 
-
-
+}
 
 .bestOfTheMonth .btn-contact {
     width: 134px;
     height: 44px;
-    margin-top: 50px; 
-    margin-bottom: 40px;
     padding: 10px;
     border-radius: 50px;
     background: rgba(139, 72, 191, 1);
@@ -240,8 +247,7 @@ body {
     text-align: center;
     color: rgba(255, 255, 255, 1);
     display: block; 
-    margin-left: auto; 
-    margin-right: auto; 
+    align-self: center;
   }
   
   
@@ -250,7 +256,7 @@ body {
     width: 480;
     height: 366px;
     left: -2px;
-    padding: 40px 50px;
+    margin-top: 50px;
     gap: 50px;
     background: rgba(60, 221, 243, 1);
     display: flex;
