--- a/css/styles.css
+++ b/css/styles.css
@@ -1,13 +1,13 @@
 @import url('https://fonts.googleapis.com/css2?family=Be+Vietnam+Pro:wght@400;500;700&display=swap');
 
 * {
-    margin: 0;
-    padding: 0;
+    margin: 0px;
+    padding: 0px;
     box-sizing: border-box;
     font-family: 'Be Vietnam Pro', sans-serif;
 }
 
-/* HEADER */
+/*! HEADER */
 
 header {
     padding: 20px 40px 0 40px;
@@ -33,7 +33,8 @@ header button {
     height: 55px;
 }
 
-/* MAIN */
+/*! MAIN */
+
 .afterHeader {
     height: 175vw;
     margin-top: 10vw;
@@ -42,11 +43,12 @@ header button {
     align-items: center;
     justify-content: space-between
 }
-.afterHeader img, div {
+.afterHeader img{
     width: 83.34%;
 }
 
 .afterHeader div {
+    width: 83.34%;
     height: 83.125vw;
     display: flex;
     flex-direction: column;
@@ -63,7 +65,7 @@ h1 {
     color: #232C50;
 }
 
-.afterHeader div h3{
+.afterHeader div h3 {
     font-weight: 500;
     font-size: 16.56px;
     line-height: 26px;
@@ -93,7 +95,9 @@ button{
     flex-direction: column;
     justify-content: space-around;
 }
-
+.cualesSonDiferencias h3:nth-child(3){
+    display: none;
+}
 .cualesSonDiferencias h2, .cualesSonDiferencias h3 {
     color: white;
     margin: 0px 20px;
@@ -102,10 +106,12 @@ button{
 .cualesSonDiferencias h2 {
     padding-top: 6px;
     font-size: 36px;
-    line-height: 41.3px;
+    line-height: 41.26px;
+    font-weight: 700;
 }
 
 .cualesSonDiferencias h3 {
+    white-space: pre-line;
     font-size: 16px;
     font-weight: 500;
     line-height: 24.18px;
@@ -190,18 +196,17 @@ body {
     display: none; 
     background-color: rgba(250, 250, 250, 1);
     height: 219px;
+    width: 445px ;
     justify-content: space-evenly;
     align-items: center;
     text-align: center;
     position: relative;
 }
-
 .cardJugador:nth-child(3) {
     display: flex;
     flex-direction: column;
 }
-
-.cardJugador:nth-child(3) img{
+.cardJugador img{
     position: absolute;
     top: -35px;
 }
@@ -230,8 +235,7 @@ body {
     flex-direction: column;
     height: 478px;
     justify-content: space-between;
-    
-
+    align-items: center;
 }
 
 .bestOfTheMonth .btn-contact {
@@ -394,5 +398,80 @@ body {
     color: #8C8C94;
 }
 
+@media (min-width: 1440px) {
+
+/*! HEADER */
+
+    header {
+        padding: 50px 160px 50px 160px;
+        display: flex;
+        justify-content: space-between;
+    }
+    
+    nav, nav ul{
+        display: flex;
+    }
+    nav ul{
+        list-style-type:none;
+        width: 27.57vw;
+        justify-content:space-between;
+        align-items: center;
+    }
+    nav ul a {
+        color: #242E52;
+        text-decoration: none;
+        font-weight: 500;
+        font-size: 13px;
+    }
+    nav ul a:hover {
+        color:rgba(36, 46, 82, 0.6);
+    }
+
+    header button {
+        display: block;
+        box-shadow: 0px 4px 7px 0px rgba(0, 0, 0, 0.25);
+    }
+    
+    .hamburger {
+        display: none;
+    }
 
 
+/*! MAIN */
+    main{
+        display: flex;
+        flex-direction: column;
+    }
+    .afterHeader {
+        height: 31.99vw;
+        flex-direction: row;
+        width: 1090px;
+        align-self: center;
+        margin: 4vw 0vh;
+    }
+    .afterHeader img{
+        width: 50%;
+    }
+    .afterHeader div{
+        width: 41.28%;
+        height:  86.55%;
+        justify-content: space-evenly;
+    }
+    .cualesSonDiferencias{
+        background-color: #8B48BF;
+        margin: 0px;
+        height: 11.67vw;
+        flex-direction: row;
+        align-items: center;
+    }
+    .cualesSonDiferencias h2, .cualesSonDiferencias h3 {
+        margin: 0px;
+        padding: 0px;
+        width: 462px;
+    }
+    .cualesSonDiferencias h3:nth-child(2){
+        display: none;
+    }
+    .cualesSonDiferencias h3:nth-child(3){
+        display: block;
+    }
