--- a/css/styles.css
+++ b/css/styles.css
@@ -46,7 +46,6 @@ header button {
 .afterHeader img{
     width: 83.34%;
 }
-
 .afterHeader div {
     width: 83.34%;
     height: 83.125vw;
@@ -55,7 +54,6 @@ header button {
     justify-content: space-between;
 
 }
-
 h1 {
     font-weight: 700;
     font-size: 50px;
@@ -64,19 +62,15 @@ h1 {
     text-align: right;
     color: #232C50;
 }
-
 .afterHeader div h3 {
     font-weight: 500;
     font-size: 16.56px;
     line-height: 26px;
     text-align: right;
 }
-
 button{
     border-width: 0px;
 }
-
-
 .btn-contact {
     width: 134px;
     height: 44px;
@@ -86,7 +80,6 @@ button{
     font-size: 13.18px;
     align-self: self-end;
 }
-
 .cualesSonDiferencias{
     margin-top: 40px;
     height: 63.75vw;
@@ -102,40 +95,33 @@ button{
     color: white;
     margin: 0px 20px;
 }
-
 .cualesSonDiferencias h2 {
     padding-top: 6px;
     font-size: 36px;
     line-height: 41.26px;
     font-weight: 700;
 }
-
 .cualesSonDiferencias h3 {
     white-space: pre-line;
     font-size: 16px;
     font-weight: 500;
     line-height: 24.18px;
 }
-
 body {
     background: #FFFFFF;
 }
-
 .puntosDiferenciaPros{
     margin-top: 50px;
     display: flex;
     flex-direction: column;
 }
-
 .diferencias {
     display: flex;
     justify-content: flex-end;
 }
-
 .contenido {
     width:92.3vw;
 }
-
 .numero {
     width: 69px;
     height: 43px;
@@ -148,8 +134,6 @@ body {
     font-weight: 700;
     color: white;
 }
-
-
 .puntosDiferenciaPros .contenido p { 
     height: auto; 
     padding: 10px; 
@@ -161,10 +145,6 @@ body {
     color: rgba(179, 178, 183, 1); 
     margin-bottom: 25px;
 }
-
-
-
-
 .contenido h3 {
     letter-spacing: -0.015em;
     color: #323851;
@@ -174,8 +154,6 @@ body {
     border-radius: 50px 0px 0px 50px;
     margin-bottom: 25px;
 }
-
-
 .bestOfTheMonth h2 {
     height: 61px;
     left: 74px;
@@ -191,7 +169,6 @@ body {
     margin-bottom: 20px;
     margin-top: 30px;
 }
-
 .cardJugador {
     display: none; 
     background-color: rgba(250, 250, 250, 1);
@@ -237,7 +214,6 @@ body {
     justify-content: space-between;
     align-items: center;
 }
-
 .bestOfTheMonth .btn-contact {
     width: 134px;
     height: 44px;
@@ -252,11 +228,8 @@ body {
     color: rgba(255, 255, 255, 1);
     display: block; 
     align-self: center;
-  }
-  
-  
-  
-  .beforeFooter {
+}
+.beforeFooter {
     width: 480;
     height: 366px;
     left: -2px;
@@ -267,10 +240,8 @@ body {
     flex-direction: column;
     align-items: center; 
     justify-content: center; 
-  }
-  
-  
-  .beforeFooter h2 {
+}
+.beforeFooter h2 {
     white-space:pre-line;
     width: 324px;
     height: auto;
@@ -280,9 +251,8 @@ body {
     letter-spacing: -0.005em;
     text-align: center;
     color: rgba(255, 255, 255, 1);
-  }
- 
-  .btn-goforit {
+}
+.btn-goforit {
     width: 134px;
     height: 44px;
     padding: 10px;
@@ -297,7 +267,6 @@ body {
     letter-spacing: 0em;
     text-align: center;
 }
-
 .footer-container {
     width: 100%;
     height: auto;
@@ -319,14 +288,12 @@ body {
     gap: 10px;
     flex-direction: column;
 }
-
 .input-container {
     display: flex;
     flex-direction: row;
     align-items: center;
     justify-content: space-between;
 }
-
 #mail {
     flex: 1;
     width: 308px;
@@ -337,7 +304,6 @@ body {
     background: rgba(255, 255, 255, 1);
     border-width: 0px;
 }
-
 #submitButton {
     width: 63px;
     height: 42px;
@@ -348,14 +314,11 @@ body {
     text-align: center;
     cursor: pointer;
 }
-
-  
 .footernav {
     display: flex;
     justify-content: space-between;
     padding: 0;
 }
-
 .footernav li {
     list-style-type: none; 
     margin-bottom: 10px; 
@@ -366,11 +329,10 @@ body {
     letter-spacing: 0em;
     margin-right: 5px; 
 }
-
 .footernav a {
     text-decoration: none;
-    color: #FFFFFF; }
-
+    color: #FFFFFF;
+}
 .redes {
     display: flex;
     width: 480px; 
@@ -378,14 +340,10 @@ body {
     padding: 10px 50px; 
     justify-content: space-between; 
 }
-
 .redes img {
     max-width: 100%; 
     height: auto; 
 }
-
-
-
 .copyright {
     width: 213px;
     height: 18px;
@@ -397,7 +355,6 @@ body {
     text-align: left;
     color: #8C8C94;
 }
-
 @media (min-width: 1440px) {
 
 /*! HEADER */
@@ -475,3 +432,5 @@ body {
     .cualesSonDiferencias h3:nth-child(3){
         display: block;
     }
+
+}
