--- a/css/styles.css
+++ b/css/styles.css
@@ -433,4 +433,23 @@ body {
         display: block;
     }
 
+/*aca escribe lu*/ 
+
+.puntosDiferenciaPros {
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: center;
+    background-color: #fafafa;
+}
+.puntosDiferenciaPros .diferencias {
+    width: 40%;
+    padding: 0% 2%;
+    margin: 0px 0px 20px;
+}
+.contenido h3{
+    background-color: #FAFAFA;
+}
+
+
+
 }
