--- a/css/styles.css
+++ b/css/styles.css
@@ -243,7 +243,7 @@ body {
 }
 .beforeFooter h2 {
     white-space:pre-line;
-    width: 324px;
+    width: 340px;
     height: auto;
     font-size: 40px;
     font-weight: 700;
@@ -433,7 +433,7 @@ body {
         display: block;
     }
 
-/*aca escribe lu*/ 
+
 
 .puntosDiferenciaPros {
     flex-direction: row;
@@ -451,5 +451,22 @@ body {
 }
 
 
+.beforeFooter {
+    background-color: #8B48BF;
+    flex-direction: row;
+    gap: 50%;
+}
+.beforeFooter h2 {
+    font-family: 'Be Vietnam' sans-serif;
+    text-align: justify;
+    width: 450px;
+    white-space: break-spaces;
+}
+
+.beforeFooter .btn-goforit {
+background-color: #FFFFFF;
+color:#8B48BF;
+box-shadow: 0px 4px 8px 0px #00000040;
+}
 
 }
