--- a/css/styles.css
+++ b/css/styles.css
@@ -457,4 +457,42 @@ body {
         display: flex;
     }
 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+/*! FOOTER */
+
+ .footer-container {
+    background-color: rgba(30, 30, 38, 1);
+    display: flex;
+    flex-direction: row-reverse;
+    justify-content: space-around; 
+ }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 }
