--- a/css/styles.css
+++ b/css/styles.css
@@ -43,9 +43,11 @@ header button {
     align-items: center;
     justify-content: space-between
 }
-.afterHeader img{
+
+.afterHeader img {
     width: 83.34%;
 }
+
 .afterHeader div {
     width: 83.34%;
     height: 83.125vw;
@@ -54,6 +56,7 @@ header button {
     justify-content: space-between;
 
 }
+
 h1 {
     font-weight: 700;
     font-size: 50px;
@@ -62,25 +65,29 @@ h1 {
     text-align: right;
     color: #232C50;
 }
+
 .afterHeader div h3 {
     font-weight: 500;
     font-size: 16.56px;
     line-height: 26px;
     text-align: right;
 }
-button{
+
+button {
     border-width: 0px;
 }
+
 .btn-contact {
     width: 134px;
     height: 44px;
     border-radius: 50px;
-    color:white;
+    color: white;
     background-color: #8B48BF;
     font-size: 13.18px;
     align-self: self-end;
 }
-.cualesSonDiferencias{
+
+.cualesSonDiferencias {
     margin-top: 40px;
     height: 63.75vw;
     background-color: #3CDDF3;
@@ -88,40 +95,50 @@ button{
     flex-direction: column;
     justify-content: space-around;
 }
-.cualesSonDiferencias h3:nth-child(3){
+
+.cualesSonDiferencias h3:nth-child(3) {
     display: none;
 }
-.cualesSonDiferencias h2, .cualesSonDiferencias h3 {
+
+.cualesSonDiferencias h2,
+.cualesSonDiferencias h3 {
     color: white;
     margin: 0px 20px;
 }
+
 .cualesSonDiferencias h2 {
     padding-top: 6px;
     font-size: 36px;
     line-height: 41.26px;
     font-weight: 700;
 }
+
 .cualesSonDiferencias h3 {
     white-space: pre-line;
     font-size: 16px;
     font-weight: 500;
     line-height: 24.18px;
 }
+
 body {
     background: #FFFFFF;
 }
-.puntosDiferenciaPros{
+
+.puntosDiferenciaPros {
     margin-top: 50px;
     display: flex;
     flex-direction: column;
 }
+
 .diferencias {
     display: flex;
     justify-content: flex-end;
 }
+
 .contenido {
-    width:92.3vw;
+    width: 92.3vw;
 }
+
 .numero {
     width: 69px;
     height: 43px;
@@ -134,17 +151,19 @@ body {
     font-weight: 700;
     color: white;
 }
-.puntosDiferenciaPros .contenido p { 
-    height: auto; 
-    padding: 10px; 
-    gap: 10px; 
+
+.puntosDiferenciaPros .contenido p {
+    height: auto;
+    padding: 10px;
+    gap: 10px;
     font-size: 16px;
     font-weight: 500;
     line-height: 26px;
     letter-spacing: -0.01em;
-    color: rgba(179, 178, 183, 1); 
+    color: rgba(179, 178, 183, 1);
     margin-bottom: 25px;
 }
+
 .contenido h3 {
     letter-spacing: -0.015em;
     color: #323851;
@@ -154,6 +173,11 @@ body {
     border-radius: 50px 0px 0px 50px;
     margin-bottom: 25px;
 }
+
+.bestOfTheMonth {
+    margin-top: 97px;
+}
+
 .bestOfTheMonth h2 {
     height: 61px;
     left: 74px;
@@ -166,36 +190,39 @@ body {
     display: flex;
     align-items: center;
     justify-content: center;
-    margin-bottom: 20px;
-    margin-top: 30px;
 }
+
 .cardJugador {
-    display: none; 
+    display: none;
     background-color: rgba(250, 250, 250, 1);
     height: 219px;
-    width: 445px ;
+    width: 445px;
     justify-content: space-evenly;
     align-items: center;
     text-align: center;
     position: relative;
 }
-.cardJugador:nth-child(3) {
+
+.cardJugador:nth-child(2) {
     display: flex;
     flex-direction: column;
 }
-.cardJugador img{
+
+.cardJugador img {
     position: absolute;
     top: -35px;
 }
+
 .textoJugador {
     font-size: 16px;
     font-weight: 500;
     line-height: 25px;
     letter-spacing: 0em;
-    text-align: center; 
-    color: rgba(185, 185, 193, 1); 
+    text-align: center;
+    color: rgba(185, 185, 193, 1);
     width: 402px;
 }
+
 .nombreJugador {
     height: 25px;
     font-size: 16px;
@@ -203,17 +230,20 @@ body {
     line-height: 25px;
     letter-spacing: -0.01em;
     text-align: center;
-    color:#3F4868;
+    color: #3F4868;
     padding-top: 20px;
-    
+
 }
-.bestOfTheMonth{
+
+.bestOfTheMonth {
     display: flex;
     flex-direction: column;
     height: 478px;
     justify-content: space-between;
     align-items: center;
+    margin-top: 58px;
 }
+
 .bestOfTheMonth .btn-contact {
     width: 134px;
     height: 44px;
@@ -226,9 +256,10 @@ body {
     letter-spacing: 0em;
     text-align: center;
     color: rgba(255, 255, 255, 1);
-    display: block; 
+    display: block;
     align-self: center;
 }
+
 .beforeFooter {
     width: 480;
     height: 366px;
@@ -238,11 +269,12 @@ body {
     background: rgba(60, 221, 243, 1);
     display: flex;
     flex-direction: column;
-    align-items: center; 
-    justify-content: center; 
+    align-items: center;
+    justify-content: center;
 }
+
 .beforeFooter h2 {
-    white-space:pre-line;
+    white-space: pre-line;
     width: 340px;
     height: auto;
     font-size: 40px;
@@ -252,11 +284,12 @@ body {
     text-align: center;
     color: rgba(255, 255, 255, 1);
 }
+
 .btn-goforit {
     width: 134px;
     height: 44px;
     padding: 10px;
-    border-radius: 50px; 
+    border-radius: 50px;
     gap: 10px;
     background-color: rgba(35, 44, 80, 1);
     box-shadow: 0px 4x 8px 0px rgba(0, 0, 0, 0.25);
@@ -267,6 +300,7 @@ body {
     letter-spacing: 0em;
     text-align: center;
 }
+
 .footer-container {
     width: 100%;
     height: auto;
@@ -281,6 +315,7 @@ body {
     text-align: center;
     position: relative;
 }
+
 #emailForm {
     width: 450px;
     height: auto;
@@ -288,12 +323,14 @@ body {
     gap: 10px;
     flex-direction: column;
 }
+
 .input-container {
     display: flex;
     flex-direction: row;
     align-items: center;
     justify-content: space-between;
 }
+
 #mail {
     flex: 1;
     width: 308px;
@@ -304,6 +341,7 @@ body {
     background: rgba(255, 255, 255, 1);
     border-width: 0px;
 }
+
 #submitButton {
     width: 63px;
     height: 42px;
@@ -314,91 +352,102 @@ body {
     text-align: center;
     cursor: pointer;
 }
+
 .footernav {
     display: flex;
     justify-content: space-between;
     padding: 0;
 }
+
 .footernav li {
-    list-style-type: none; 
-    margin-bottom: 10px; 
+    list-style-type: none;
+    margin-bottom: 10px;
     text-align: left;
     font-size: 16px;
     font-weight: 400;
     line-height: 23px;
     letter-spacing: 0em;
-    margin-right: 5px; 
+    margin-right: 5px;
 }
+
 .footernav a {
     text-decoration: none;
     color: #FFFFFF;
 }
+
 .redes {
     display: flex;
-    width: 480px; 
-    height: 42.05px; 
-    padding: 10px 50px; 
-    justify-content: space-between; 
+    width: 480px;
+    height: 42.05px;
+    padding: 10px 50px;
+    justify-content: space-between;
 }
+
 .redes img {
-    max-width: 100%; 
-    height: auto; 
+    max-width: 100%;
+    height: auto;
 }
+
 .copyright {
     width: 213px;
     height: 18px;
-    font-family: 'Be Vietnam', sans-serif;
-    font-size: 13px;
+    font-size: 12.5px;
     font-weight: 500;
     line-height: 18px;
     letter-spacing: 0em;
     text-align: left;
     color: #8C8C94;
 }
+
 @media (min-width: 1440px) {
 
-/*! HEADER */
+    /*! HEADER */
 
     header {
         padding: 50px 160px 50px 160px;
         display: flex;
         justify-content: space-between;
     }
-    
-    nav, nav ul{
+
+    nav,
+    nav ul {
         display: flex;
     }
-    nav ul{
-        list-style-type:none;
+
+    nav ul {
+        list-style-type: none;
         width: 27.57vw;
-        justify-content:space-between;
+        justify-content: space-between;
         align-items: center;
     }
+
     nav ul a {
         color: #242E52;
         text-decoration: none;
         font-weight: 500;
         font-size: 13px;
     }
+
     nav ul a:hover {
-        color:rgba(36, 46, 82, 0.6);
+        color: rgba(36, 46, 82, 0.6);
     }
 
     header button {
         display: block;
         box-shadow: 0px 4px 7px 0px rgba(0, 0, 0, 0.25);
     }
-    
+
     .hamburger {
         display: none;
     }
 
 
-/*! MAIN */
-    main{
+    /*! MAIN */
+    main {
         display: flex;
         flex-direction: column;
     }
+
     .afterHeader {
         height: 31.99vw;
         flex-direction: row;
@@ -406,93 +455,154 @@ body {
         align-self: center;
         margin: 4vw 0vh;
     }
-    .afterHeader img{
+
+    .afterHeader img {
         width: 50%;
     }
-    .afterHeader div{
+
+    .afterHeader div {
         width: 41.28%;
-        height:  86.55%;
+        height: 86.55%;
         justify-content: space-evenly;
     }
-    .cualesSonDiferencias{
+
+    .cualesSonDiferencias {
         background-color: #8B48BF;
         margin: 0px;
         height: 11.67vw;
         flex-direction: row;
         align-items: center;
     }
-    .cualesSonDiferencias h2, .cualesSonDiferencias h3 {
+
+    .cualesSonDiferencias h2,
+    .cualesSonDiferencias h3 {
         margin: 0px;
         padding: 0px;
         width: 462px;
     }
-    .cualesSonDiferencias h3:nth-child(2){
+
+    .cualesSonDiferencias h3:nth-child(2) {
         display: none;
     }
-    .cualesSonDiferencias h3:nth-child(3){
+
+    .cualesSonDiferencias h3:nth-child(3) {
         display: block;
     }
+
     .puntosDiferenciaPros {
         flex-direction: row;
         flex-wrap: wrap;
         justify-content: center;
         background-color: #fafafa;
     }
+
     .puntosDiferenciaPros .diferencias {
         width: 40%;
         padding: 0% 2%;
         margin: 0px 0px 20px;
     }
-    .contenido h3{
+
+    .contenido h3 {
         background-color: #FAFAFA;
     }
+
     .beforeFooter {
         background-color: #8B48BF;
         flex-direction: row;
         gap: 50%;
     }
+
     .beforeFooter h2 {
-        font-family: 'Be Vietnam' sans-serif;
-        text-align: justify;
-        width: 450px;
-        white-space: break-spaces;
+        text-align: left;
+        width: 420px;
+        white-space: normal;
     }
+
     .beforeFooter .btn-goforit {
         background-color: #FFFFFF;
-        color:#8B48BF;
+        color: #8B48BF;
         box-shadow: 0px 4px 8px 0px #00000040;
     }
+
     .puntosDiferenciaPros {
         flex-direction: row;
         flex-wrap: wrap;
         justify-content: center;
         background-color: #fafafa;
+        margin: 0px;
+        padding-top: 50px;
     }
+
     .puntosDiferenciaPros .diferencias {
         width: 40%;
         padding: 0% 2%;
         margin: 0px 0px 20px;
     }
-    .contenido h3{
+
+    .contenido h3 {
         background-color: #FAFAFA;
     }
-    .cardJugador{
+
+    .cardJugador {
         display: flex;
         flex-direction: column;
     }
-    .cardsJuntas{
+
+    .cardsJuntas {
         display: flex;
     }
 
 
-/*! FOOTER */
-
+    /*! FOOTER */
     .footer-container {
         background-color: rgba(30, 30, 38, 1);
-        display: flex;
-        flex-direction: row-reverse;
-        justify-content: space-around; 
+        display: grid;
+        grid-template-areas:
+            "logo links form"
+            "redes links copy";
+        padding: 53px 165px 53px;
     }
 
-}
+    .logofooter {
+        width: 108px;
+        grid-column: logo;
+        grid-row: logo;
+    }
 
+    .footernav {
+        width: 393px;
+        height: 141px;
+        grid-column: links;
+        grid-row: links;
+    }
+
+    #emailForm {
+        width: 272px;
+        grid-row: form;
+        justify-self: right
+    }
+
+    #emailForm input{
+        width: 201px;
+        
+    }
+
+    .redes {
+        height: auto;
+        width: 154px;
+        grid-row: redes;
+        padding: 0;
+    }
+
+    .redes img{
+        width: 20px;
+        height: 20px;
+    }
+
+    .copyright {
+        width: 224px;
+        grid-row: copy;
+        grid-column: copy;
+        justify-self: right
+    }
+}
