--- a/css/styles.css
+++ b/css/styles.css
@@ -10,7 +10,7 @@
 /*! HEADER */
 
 header {
-    padding: 20px 40px 0 40px;
+    padding: 40px 56px 0 56px;
     display: flex;
     justify-content: space-between;
 }
@@ -82,6 +82,7 @@ button{
 }
 .cualesSonDiferencias{
     margin-top: 40px;
+    padding: 40px 0px;
     height: 63.75vw;
     background-color: #3CDDF3;
     display: flex;
@@ -99,7 +100,6 @@ button{
     padding-top: 6px;
     font-size: 36px;
     line-height: 41.26px;
-    font-weight: 700;
 }
 .cualesSonDiferencias h3 {
     white-space: pre-line;
@@ -135,9 +135,9 @@ body {
     color: white;
 }
 .puntosDiferenciaPros .contenido p { 
+    width: 95%;
     height: auto; 
     padding: 10px; 
-    gap: 10px; 
     font-size: 16px;
     font-weight: 500;
     line-height: 26px;
@@ -155,17 +155,10 @@ body {
     margin-bottom: 25px;
 }
 .bestOfTheMonth h2 {
-    height: 61px;
-    left: 74px;
     font-size: 39px;
     font-weight: 700;
-    line-height: 61px;
     letter-spacing: -0.01em;
-    text-align: left;
     color: rgba(36, 46, 83, 1);
-    display: flex;
-    align-items: center;
-    justify-content: center;
     margin-bottom: 20px;
     margin-top: 30px;
 }
@@ -176,7 +169,6 @@ body {
     width: 445px ;
     justify-content: space-evenly;
     align-items: center;
-    text-align: center;
     position: relative;
 }
 .cardJugador:nth-child(3) {
@@ -191,10 +183,9 @@ body {
     font-size: 16px;
     font-weight: 500;
     line-height: 25px;
-    letter-spacing: 0em;
     text-align: center; 
     color: rgba(185, 185, 193, 1); 
-    width: 402px;
+    width: 393px;
 }
 .nombreJugador {
     height: 25px;
@@ -230,9 +221,7 @@ body {
     align-self: center;
 }
 .beforeFooter {
-    width: 480;
     height: 366px;
-    left: -2px;
     margin-top: 50px;
     gap: 50px;
     background: rgba(60, 221, 243, 1);
@@ -243,8 +232,6 @@ body {
 }
 .beforeFooter h2 {
     white-space:pre-line;
-    width: 340px;
-    height: auto;
     font-size: 40px;
     font-weight: 700;
     line-height: 48px;
@@ -255,39 +242,28 @@ body {
 .btn-goforit {
     width: 134px;
     height: 44px;
-    padding: 10px;
     border-radius: 50px; 
-    gap: 10px;
     background-color: rgba(35, 44, 80, 1);
-    box-shadow: 0px 4x 8px 0px rgba(0, 0, 0, 0.25);
+    box-shadow: 0px 4px 8px 0px rgba(0, 0, 0, 0.25);
     color: rgba(255, 255, 255, 1);
     font-size: 13px;
-    font-weight: 500;
-    line-height: 19px;
-    letter-spacing: 0em;
-    text-align: center;
+    font-weight: 500;   
 }
+
 .footer-container {
-    width: 100%;
-    height: auto;
-    margin: 0 auto;
     padding: 40px;
     gap: 25px;
     background-color: rgba(30, 30, 38, 1);
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: space-between;
     text-align: center;
     position: relative;
 }
 #emailForm {
-    width: 450px;
-    height: auto;
     padding: 10px 0;
-    gap: 10px;
-    flex-direction: column;
 }
+
 .input-container {
     display: flex;
     flex-direction: row;
@@ -295,10 +271,8 @@ body {
     justify-content: space-between;
 }
 #mail {
-    flex: 1;
     width: 308px;
     height: 44.52px;
-    gap: 9px;
     padding: 10px;
     border-radius: 50px;
     background: rgba(255, 255, 255, 1);
@@ -307,17 +281,15 @@ body {
 #submitButton {
     width: 63px;
     height: 42px;
-    padding: 5px;
     border-radius: 50px;
     background: rgba(139, 72, 191, 1);
     color: #fff;
-    text-align: center;
     cursor: pointer;
 }
 .footernav {
+    width: 324px;
     display: flex;
     justify-content: space-between;
-    padding: 0;
 }
 .footernav li {
     list-style-type: none; 
@@ -329,30 +301,23 @@ body {
     letter-spacing: 0em;
     margin-right: 5px; 
 }
+
 .footernav a {
     text-decoration: none;
     color: #FFFFFF;
 }
+
 .redes {
     display: flex;
     width: 480px; 
-    height: 42.05px; 
     padding: 10px 50px; 
     justify-content: space-between; 
 }
-.redes img {
-    max-width: 100%; 
-    height: auto; 
-}
+
 .copyright {
-    width: 213px;
-    height: 18px;
-    font-family: 'Be Vietnam', sans-serif;
+    width: 224px;
     font-size: 13px;
     font-weight: 500;
-    line-height: 18px;
-    letter-spacing: 0em;
-    text-align: left;
     color: #8C8C94;
 }
 @media (min-width: 1440px) {
@@ -415,6 +380,7 @@ body {
         justify-content: space-evenly;
     }
     .cualesSonDiferencias{
+        padding: 0px 150px;
         background-color: #8B48BF;
         margin: 0px;
         height: 11.67vw;
@@ -422,8 +388,6 @@ body {
         align-items: center;
     }
     .cualesSonDiferencias h2, .cualesSonDiferencias h3 {
-        margin: 0px;
-        padding: 0px;
         width: 462px;
     }
     .cualesSonDiferencias h3:nth-child(2){
@@ -437,22 +401,29 @@ body {
         flex-wrap: wrap;
         justify-content: center;
         background-color: #fafafa;
+        margin: 0px;
+        padding-top: 50px;
     }
     .puntosDiferenciaPros .diferencias {
         width: 40%;
         padding: 0% 2%;
-        margin: 0px 0px 20px;
+        margin-bottom: 20px;
     }
     .contenido h3{
         background-color: #FAFAFA;
     }
+
+    .contenido p{
+        width: 460px;
+    }
+ 
     .beforeFooter {
         background-color: #8B48BF;
         flex-direction: row;
         gap: 50%;
+        height: 225px;
     }
     .beforeFooter h2 {
-        font-family: 'Be Vietnam' sans-serif;
         text-align: justify;
         width: 450px;
         white-space: break-spaces;
@@ -462,20 +433,7 @@ body {
         color:#8B48BF;
         box-shadow: 0px 4px 8px 0px #00000040;
     }
-    .puntosDiferenciaPros {
-        flex-direction: row;
-        flex-wrap: wrap;
-        justify-content: center;
-        background-color: #fafafa;
-    }
-    .puntosDiferenciaPros .diferencias {
-        width: 40%;
-        padding: 0% 2%;
-        margin: 0px 0px 20px;
-    }
-    .contenido h3{
-        background-color: #FAFAFA;
-    }
+    
     .cardJugador{
         display: flex;
         flex-direction: column;
@@ -484,14 +442,60 @@ body {
         display: flex;
     }
 
+    .btn-contact:hover {
+        background-color: rgba(139, 72, 191, 0.70);
+    }
+
 
 /*! FOOTER */
 
     .footer-container {
-        background-color: rgba(30, 30, 38, 1);
         display: flex;
         flex-direction: row-reverse;
         justify-content: space-around; 
+    }
+
+    .logofooter {
+        width: 108px;
+        grid-column: logo;
+        grid-row: logo;
+    }
+
+    .footernav {
+        width: 393px;
+        height: 141px;
+        grid-column: links;
+        grid-row: links;
+    }
+
+    #emailForm {
+        width: 272px;
+        grid-row: form;
+        justify-self: right
+    }
+
+    #emailForm input{
+        width: 201px;
+
+    }
+
+    .redes {
+        height: auto;
+        width: 154px;
+        grid-row: redes;
+        padding: 0;
+    }
+
+    .redes img{
+        width: 20px;
+        height: 20px;
+    }
+
+    .copyright {
+        width: 224px;
+        grid-row: copy;
+        grid-column: copy;
+        justify-self: right
     }
 
 }
